# medical-data-extraction

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
frontend/: app.py
notebooks/: patient_details_parser.ipynb  prescription_parser.ipynb
src/api/: main.py  request.py  schemas.py
src/medical_ocr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ocr/: extractor.py  generic_parser.py  patient_details_parser.py  prescription_parser.py
